--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://snort.social/p/npub1x2qespfwulzhvlk3x4jr3asatvesnmffa9r8t6g99z73umcwfw7s99elwx'" />
+<meta http-equiv="Refresh" content="0; url='https://www.thebtccourse.com'" />
